--- a/bot.yml
+++ b/bot.yml
@@ -1,9 +1,9 @@
-name: Beepboop Starterbot
+name: yoda-train
 description: A simple Python bot sample for Beep Boop
 avatar: resources/avatar.png
 background: resources/background.png
 config:
-  - name: yoda-train
+  - name: LOG_LEVEL
     friendly_name: Severity level to show for logging.
     info: See https://docs.python.org/2/library/logging.html#levels
     default: DEBUG
